force-app/main/default/objects/CoPay_Enrollment__c/CoPay_Enrollment__c.object-meta.xml
<CustomObject>
    <label>CoPay Enrollment</label>
    <nameField>
        <label>CoPay Enrollment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CoPay Enrollments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>