force-app/main/default/objects/CoPay_Enrollment__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>CoPay Enrollments</relationshipLabel>
    <relationshipName>CoPay_Enrollments</relationshipName>
    <type>Lookup</type>
</CustomField>