force-app/main/default/objects/CoPay_Enrollment__c/fields/Drug__c.field-meta.xml
<CustomField>
    <fullName>Drug__c</fullName>
    <label>Drug</label>
    <length>30</length>
    <type>Text</type>
</CustomField>