force-app/main/default/objects/CoPay_Enrollment__c/fields/Has_your_health_care_provider_already_st__c.field-meta.xml
<CustomField>
    <fullName>Has_your_health_care_provider_already_st__c</fullName>
    <label>Has the HCP already started application?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>