force-app/main/default/objects/CoPay_Enrollment__c/fields/Health_Care_Provider__c.field-meta.xml
<CustomField>
    <fullName>Health_Care_Provider__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Health Care Provider</label>
    <referenceTo>Health_Care_Provider__c</referenceTo>
    <relationshipLabel>CoPay Enrollments</relationshipLabel>
    <relationshipName>CoPay_Enrollments</relationshipName>
    <type>Lookup</type>
</CustomField>