force-app/main/default/objects/CoPay_Enrollment__c/fields/Healthcare_Provider__c.field-meta.xml
<CustomField>
    <fullName>Healthcare_Provider__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Healthcare Provider</label>
    <referenceTo>HealthcareProvider</referenceTo>
    <relationshipLabel>CoPay Enrollments</relationshipLabel>
    <relationshipName>CoPay_Enrollments</relationshipName>
    <type>Lookup</type>
</CustomField>