force-app/main/default/objects/CoPay_Enrollment__c/fields/Patient_Type__c.field-meta.xml
<CustomField>
    <fullName>Patient_Type__c</fullName>
    <label>Patient Type</label>
    <length>30</length>
    <type>Text</type>
</CustomField>