force-app/main/default/objects/CoPay_Enrollment__c/fields/Prescription_Drug_Coverage__c.field-meta.xml
<CustomField>
    <fullName>Prescription_Drug_Coverage__c</fullName>
    <label>Prescription Drug Coverage</label>
    <length>30</length>
    <type>Text</type>
</CustomField>