force-app/main/default/objects/CoPay_Enrollment__c/listViews/Novo_PAP.listView-meta.xml
<ListView>
    <fullName>Novo_PAP</fullName>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Drug__c</columns>
    <columns>Prescription_Drug_Coverage__c</columns>
    <filterScope>Everything</filterScope>
    <label>Novo PAP</label>
</ListView>